...
                    child: Column(
                      mainAxisSize: MainAxisSize.max,
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        // Discipline Dropdown
                        Text(
                          'Discipline',
                          style: FlutterFlowTheme.of(context).labelMedium.override(
                                font: GoogleFonts.inter(
                                  fontWeight: FontWeight.w500,
                                ),
                                letterSpacing: 0.0,
                              ),
...
                            },
                          ),
                        ),

                        // Firearm Field
                        Text(
                          'Firearm',
                          style: FlutterFlowTheme.of(context).labelMedium.override(
                                font: GoogleFonts.inter(fontWeight: FontWeight.w500),
                                letterSpacing: 0.0,
                              ),
                        ),
                        Padding(
...
                            validator: _model.ammoTypeTextControllerValidator.asValidator(context),
                          ),
                        ),

                        // Distance Field
                        Text(
                          'Distance (meters)',
                          style: FlutterFlowTheme.of(context).labelMedium.override(
                                font: GoogleFonts.inter(fontWeight: FontWeight.w500),
                                letterSpacing: 0.0,
                              ),
                        ),
                        Padding(
...
                          children: [
                            Expanded(
                              child: Column(
                                crossAxisAlignment: CrossAxisAlignment.start,
                                children: [
                                  Text(
                                    'Total Shots',
                                    style: FlutterFlowTheme.of(context).labelMedium.override(
                                          font: GoogleFonts.inter(fontWeight: FontWeight.w500),
                                          letterSpacing: 0.0,
                                        ),
                                  ),
                                  Padding(
...
